--- a/Build.gradle
+++ b/Build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:8.1.1"
+        implementation 'com.yuyakaido.android:card-stack-view:2.3.4'
     }
 }
 
